kubernetes/apps/external-ingresses/vpn-streaming-casal/ingress/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vpn-streaming-casal-proxy-service
  namespace: external-ingresses
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: vpn-streaming-casal-proxy-service # Must be equal to Service name for automatic mapping
  namespace: external-ingresses
subsets:
  - addresses:
      - ip: 10.30.30.42 # VPNStreamCasal LXC container
    ports:
      - port: 8080
        name: http
        protocol: TCP
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: vpn-streaming-casal-passthrough
  namespace: external-ingresses
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: vpn-streaming-casal-httproute
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vpn-streaming-casal-httproute
  namespace: external-ingresses
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "VPN Streaming Casal"
    gethomepage.dev/description: "NordVPN / Tailscale Streaming Gateway"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "si-nordvpn.svg"
    gethomepage.dev/href: "https://vpn-streaming-casal.${SECRET_DOMAIN}"
spec:
  hostnames:
    - vpn-streaming-casal.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vpn-streaming-casal-proxy-service
          namespace: external-ingresses
          port: 8080
          weight: 1
